--- a/README.rmd
+++ b/README.rmd
@@ -40,7 +40,7 @@ library(ggplot2)
 library(PeruData)
 fst_plot <- \(.map, .titl){
   ggplot(.map) +
-    geom_sf(fill = "gray60") +
+    geom_sf(fill = "white") +
     theme_void() +
     labs(title = {{.titl}}) +
     theme(
